--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -12,3 +12,8 @@ fastmcp
 pytest>=8.0
 pytest-asyncio>=0.23
 pytest-xdist>=3.0
+
+# API and Web Platform
+fastapi>=0.111.0
+uvicorn>=0.30.0
+sse-starlette>=2.1.0
